css/styles.css
/*--------------------------------------------------------------
CSS Reset
--------------------------------------------------------------*/
html {
	font-family: sans-serif;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust:     100%;
}

body {
	margin: 0;
	background-color: pink;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
	display: block;
}
 
audio,
canvas,
progress,
video {
	display: inline-block;
	vertical-align: baseline;
}

audio:not([controls]) {
	display: none;
	height: 0;
}

[hidden],
template {
	display: none;
}

a {
	background-color: transparent;
}

a:active,
a:hover {
	outline: 0;
}

abbr[title] {
	border-bottom: 1px dotted;
}

b,
strong {
	font-weight: bold;
}

dfn {
	font-style: italic;
}

h1 {
	font-size: 2em;
	margin: 0.67em 0;
}

mark {
	background: #ff0;
	color: #000;
}

small {
	font-size: 80%;
}

sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

sup {
	top: -0.5em;
}

sub {
	bottom: -0.25em;
}

img {
	display: block;
	border: 0;
	width: 100%;
	height: auto;
}

svg:not(:root) {
	overflow: hidden;
}

figure {
	margin: 0;
}

hr {
	box-sizing: content-box;
	height: 0;
}

pre {
	overflow: auto;
}

code,
kbd,
pre,
samp {
	font-family: monospace, monospace;
	font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
	color: inherit;
	font: inherit;
	margin: 0;
}

button {
	overflow: visible;
}

button,
select {
	text-transform: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
	-webkit-appearance: button;
	cursor: pointer;
}

button[disabled],
html input[disabled] {
	cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input {
	line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box;
	padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

input[type="search"] {
	-webkit-appearance: textfield;
	box-sizing: content-box;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
	-webkit-appearance: none;
}

fieldset {
	border: 1px solid #c0c0c0;
	margin: 0 2px;
	padding: 0.35em 0.625em 0.75em;
}

legend {
	border: 0;
	padding: 0;

}

textarea {
	overflow: auto;
}

optgroup {
	font-weight: bold;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

td,
th {
	padding: 0;
}

/*--------------------------------------------------------------
Accessibility
--------------------------------------------------------------*/
/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:hover,
.screen-reader-text:active,
.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar */
}


/*--------------------------------------------------------------
Layouts
--------------------------------------------------------------*/

.centered {
    margin: 0 auto;
    padding: 0 1em;
}

@media screen and (min-width: 62em) {
    .centered {
        max-width: 62em;
    }
}


/*--------------------------------------------------------------
Header styles
--------------------------------------------------------------*/

.masthead {
    padding: 1em 0;
    background-color: deeppink;
}

@media screen and (min-width: 25em) {
    .site-header {
        -js-display: flex;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
    }
}

.site-branding {
    margin-right: 1em;
}

.site-branding a {
    text-decoration: none;
}

.site-branding a:focus,
.site-branding a:hover {
    text-decoration: underline white;
}

.icon-mmlogo {
    -js-display: flex;
    display: flex;
    width: .75em;
    height: .75em;
    margin-right: .35em;
    padding: .4em;
    border: 1px solid white;
}

.icon-mmlogo svg {
    width: 100%;
    height: 100%;
}

.site-title {
    font-size: 1.4em;
}

.site-title a {
    -js-display: flex;
    display: flex;
    align-items: baseline;
    margin: 0;
    font-weight: 400;
    text-align: center;
    color: white;
}

/*--------------------------------------------------------------
Mobile-first menu
--------------------------------------------------------------*/

.multi-level-nav ul {
    margin: 0;
    padding: 0;
	list-style-type: none;
}

.multi-level-nav a {
    display: block;
    padding: .6em 0;
    color: white;
    text-decoration: none;
    border-bottom: 1px solid hsla(0, 0%, 100%, .1);
    transition: all .4s;
}

.multi-level-nav a:focus,
.multi-level-nav a:hover {
    padding-left: 1em;
    background: white;
    color: #002254;
}

@media screen and (max-width: 25em){
	.multi-level-nav li li a {
		padding-left: 1em;
	}

    .multi-level-nav li li a:focus,
    .multi-level-nav li li a:hover {
        padding-left: 1.8em;
    }

    .multi-level-nav ul ul li a::before {
        margin: 0 .4em 0 -.8em ;
        content: '–';
    }

	.dropdown-toggle {
		display: none;
	}

    .multi-level-nav > ul:last-of-type > li:nth-last-child(2) > a {
        border-bottom: none;
    }

    a.reserve {
        margin-top: .4em;
        text-align: center;
        font-weight: 600;
        border: 1px solid white;

    }

    a.reserve:focus,
    a.reserve:hover {
        padding-left: 0;
        background: white;
        color: #002254;
    }
}

@media screen and (min-width: 25em){
	.multi-level-nav ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
	}

	.multi-level-nav li {
        flex: 1 0 auto;
		position: relative;
	}

    .multi-level-nav a {
        padding-right: 1.4em;
        border-bottom: none;
    }

    .multi-level-nav a:focus,
    .multi-level-nav a:hover {
        padding-left: 0;
        background: inherit;
        color: white;
        text-decoration: underline;
    }

	.multi-level-nav ul ul {
		display: none;
		position: absolute;
		z-index:100;
	}

	.multi-level-nav ul ul li {
        flex: 1 1 auto;
	}

	.multi-level-nav ul .toggled-on {
		display: flex;
	}

	.dropdown-toggle {
		margin: 0 -.25em 0 .25em;
		padding: 0 .25em;
		border: 0;
		content: "";
		text-transform: lowercase; /* Stop screen readers to read the text as capital letters */
		background-color: transparent;
	}

	.dropdown-toggle:after {
		position: relative;
		top: 0;
		left: 0;
        width: 1em;
		color: white;
		content: "+";
		line-height: 1em;
	}

	.dropdown-toggle:hover,
	.dropdown-toggle:focus {
		outline: solid white 1px;
	}

	.dropdown-toggle.toggle-on:after {
		content: "–";
	}

    .toggled-on {
        border: 1px solid white;
        border-top: none;
    }

    .toggled-on a {
        padding-left: .8em;
        background-color: #002254;
    }

    a.reserve {
        margin-top: .4em;
        padding: .2em .5em;
        border: 1px solid white;
        transition: none;
    }

    a.reserve:focus,
    a.reserve:hover {
        padding-left: .5em;
        background: white;
        color: #002254;
        text-decoration: none;
    }
}


/*--------------------------------------------------------------
Front page styles
--------------------------------------------------------------*/

.main-pitch {
    background: pink;
}


.featured-image {
	margin: 2em auto;
	width: 70%;
}

.featured-image figcaption {
	margin-top: 1em;
	padding-right: 30%;
	padding-left: 1em;
	font-style: italic;

	color: grey;
	border-left: 2px solid grey;
}
.main-title {
    font-size: 2.2em;
    text-align: center;
    padding-top: .5em;
}

.teaser {
    padding: 0 1em;
    font-size: 1.1em;
    padding-bottom: 1.5em;
}




/*--------------------------------------------------------------
Contact with Cupcake styles
--------------------------------------------------------------*/
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);

.container {
    
	max-width:400px;
	width:100%;
	margin:0 auto;
	position:relative;
}

.formtext {
    color: deeppink;

}


#contact input[type="text"], #contact input[type="email"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }

#contact {
	background:#F9F9F9;
	padding:25px;
	margin:50px 0;
    float:left;
}

.hm {
    float:right;
}

#contact h3 {
	color: hotpink;
	display: block;
	font-size: 30px;
	font-weight: 400;
}

#contact h4 {
	margin:5px 0 15px;
	display:block;
	font-size:13px;
}

fieldset {
	border: medium none !important;
	margin: 0 0 10px;
	min-width: 100%;
	padding: 0;
	width: 100%;
}

#contact input[type="text"], #contact input[type="email"], #contact textarea {
	width:100%;
	border:1px solid #CCC;
	background:#FFF;
	margin:0 0 5px;
	padding:10px;
}

#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact textarea:hover {
	-webkit-transition:border-color 0.3s ease-in-out;
	-moz-transition:border-color 0.3s ease-in-out;
	transition:border-color 0.3s ease-in-out;
	border:1px solid #AAA;
}

#contact textarea {
	height:100px;
	max-width:100%;
  resize:none;
}

#contact button[type="submit"] {
	cursor:pointer;
	width:100%;
	border:none;
	background:#FFC0CB;
	color:#FFF;
	margin:0 0 5px;
	padding:10px;
	font-size:15px;
}

#contact button[type="submit"]:hover {
	background:#FFC0CB;
	-webkit-transition:background 0.3s ease-in-out;
	-moz-transition:background 0.3s ease-in-out;
	transition:background-color 0.3s ease-in-out;
}

#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }

#contact input:focus, #contact textarea:focus {
	outline:0;
	border:1px solid #999;
}
::-webkit-input-placeholder {
 color:#888;
}
:-moz-placeholder {
 color:#888;
}
::-moz-placeholder {
 color:#888;
}
:-ms-input-placeholder {
 color:#888;
}


/*--------------------------------------------------------------
CTA
--------------------------------------------------------------*/

.cta {
    padding: 3em;
    background: #ff1493;
    text-align: center;
}

.cta a {
    padding: 0 .5em;
    font-size: 2em;
    font-weight: 900;
    color: #FFFCED;
    text-decoration: none;
    border: 5px solid #FFFCED;
}

@media screen and (min-width: 40em) {
    .cta a {
        font-size: 3em;
        border-width: 10px;
    }
}

.cta a:focus,
.cta a:hover {
    background: #FFFCED;
    color: #ff1493;
}


/* Global layouts */
@media screen and (min-width: 700px) {
    .two-column {
        column-count: 2;
        column-gap: 2.4em;
    }
}

/*--------------------------------------------------------------
Typography
--------------------------------------------------------------*/

body,
button,
input,
select,
textarea {
	font-family: 'Source Sans Pro', 'Helvetica', Arial, sans-serif;
	font-size: 18px;
	line-height: 1.5;
    color: white
}



/*--------------------------------------------------------------
Three Reasons
--------------------------------------------------------------*/

.three-reasons {
    margin: 2em 0;
    padding: 0;
    
}

.reason {
    margin-bottom: 1em;
    padding-bottom: 2em;
	flex: 1;
}

.reason figcaption {
    padding: 0 3em;
}

@media screen and (min-width: 50em) {
    .three-reasons {
        -js-display: flex;
        display: flex;
        margin: 1em auto 0;
    }

    .reason figcaption {
        padding: 0 1.5em;
    }
}

@media screen and (min-width: 70em) {
    .three-reasons {
        padding: 2em 0 0;
    }

}

.content-title {
    margin-bottom: 0;
    font-size: 1.4em;
}

.reason p {
    margin: .5em 0 1.8em;
}

